--- a/metadata/repository_mask.conf
+++ b/metadata/repository_mask.conf
@@ -1,5 +1,6 @@
 (
    app-text/pdfgrep[~scm]
+   net-mail/mpop[~scm]
 ) [[
     *author = [ Ankur Kothari <ankz.kothari@gmail.com> ]
     *date = [ 04 Aug 2013 ]
