--- a/metadata/repository_mask.conf
+++ b/metadata/repository_mask.conf
@@ -5,6 +5,7 @@
    net-p2p/retroshare[~scm]
    sys-boot/efivar[~scm]
    sys-libs/musl[~scm]
+   sys-power/suspend-utils[~scm]
 ) [[
     *author = [ Ankur Kothari <ankz.kothari@gmail.com> ]
     *date = [ 04 Aug 2013 ]
