--- a/metadata/repository_mask.conf
+++ b/metadata/repository_mask.conf
@@ -2,6 +2,7 @@
    app-text/pdfgrep[~scm]
    mail-client/nmh[~scm]
    net-mail/mpop[~scm]
+   sys-boot/efivar[~scm]
 ) [[
     *author = [ Ankur Kothari <ankz.kothari@gmail.com> ]
     *date = [ 04 Aug 2013 ]
