retroshare: add scm version
Upstream don't provide source tarballs with any consistency,
and recommend building from svn trunk.
Masked, since it requires subversion.

--- a/metadata/repository_mask.conf
+++ b/metadata/repository_mask.conf
@@ -2,6 +2,7 @@
    app-text/pdfgrep[~scm]
    mail-client/nmh[~scm]
    net-mail/mpop[~scm]
+   net-p2p/retroshare[~scm]
    sys-boot/efivar[~scm]
 ) [[
     *author = [ Ankur Kothari <ankz.kothari@gmail.com> ]
