--- a/metadata/repository_mask.conf
+++ b/metadata/repository_mask.conf
@@ -4,6 +4,7 @@
    net-mail/mpop[~scm]
    net-p2p/retroshare[~scm]
    sys-boot/efivar[~scm]
+   sys-libs/musl[~scm]
 ) [[
     *author = [ Ankur Kothari <ankz.kothari@gmail.com> ]
     *date = [ 04 Aug 2013 ]
