sshuttle: add 0.61, mask scm

--- a/metadata/repository_mask.conf
+++ b/metadata/repository_mask.conf
@@ -3,6 +3,7 @@
    mail-client/nmh[~scm]
    net-mail/mpop[~scm]
    net-p2p/retroshare[~scm]
+   net-proxy/sshuttle[~scm]
    sys-boot/efivar[~scm]
    sys-libs/musl[~scm]
    sys-power/suspend-utils[~scm]
