--- a/metadata/repository_mask.conf
+++ b/metadata/repository_mask.conf
@@ -1,5 +1,6 @@
 (
    app-text/pdfgrep[~scm]
+   dev-python/musicbrainzngs[~scm]
    mail-client/nmh[~scm]
    net-mail/mpop[~scm]
    net-p2p/retroshare[~scm]
