--- a/metadata/repository_mask.conf
+++ b/metadata/repository_mask.conf
@@ -5,6 +5,7 @@
    net-mail/mpop[~scm]
    net-p2p/retroshare[~scm]
    net-proxy/sshuttle[~scm]
+   sys-apps/mbox[~scm]
    sys-boot/efivar[~scm]
    sys-libs/musl[~scm]
    sys-power/suspend-utils[~scm]
